[Frontend] Fix plot image cutoff on export
The images were being cutoff due to the "top" attribute of .gl-plot
not changing when the buttons were hidden. The buttons are now
hidden by CSS class rather than ng-show, which makes updating the
.gl-plot top attribute easier.

--- a/platform/commonUI/general/res/sass/plots/_plots-main.scss
+++ b/platform/commonUI/general/res/sass/plots/_plots-main.scss
@@ -43,6 +43,16 @@
 			top: $btnExportH + $interiorMargin;
 		}
 	}
+	&.hide-l-btn-set {
+		.s-button.t-export {
+			@include trans-prop-nice(opacity, 0ms, 0ms);
+			opacity: 0;
+		}
+		.gl-plot {
+			@include trans-prop-nice(top, $dur: 0ms);
+			top: 0;
+		}
+	}
 }
 
 .gl-plot {
